--- a/css/estilo9.css
+++ b/css/estilo9.css
@@ -3,7 +3,7 @@
 *{
 	margin: 0;
 	padding: 0;
-}
+}*/
 
 body{
 	background-color:#F2F2F2;
@@ -68,13 +68,7 @@ body{
 	
 }
 
-/* como se vera el titulo en el cuadro */
 
-
-
-
-
-/* propiedades del bonton mostrar productos */
 
 
 
